# qt5-click-shapes

./: CMakeLists.txt  ClickShapeWidget.cpp  ClickShapeWidget.h  CustomObj.cpp  CustomObj.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp  objects.json  style.css
